logs/mobility/build.make.009.log
[  0%] [  0%] [  0%] [  0%] Built target rosgraph_msgs_generate_messages_lisp
Built target tf2_msgs_generate_messages_lisp
Built target roscpp_generate_messages_py
Built target roscpp_generate_messages_lisp
[  0%] [  0%] [  0%] Built target sensor_msgs_generate_messages_cpp
Built target geometry_msgs_generate_messages_py
Built target tf_generate_messages_cpp
[  0%] [  0%] [  0%] [  0%] Built target geometry_msgs_generate_messages_lisp
Built target geometry_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_cpp
Built target actionlib_generate_messages_lisp
Built target actionlib_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] [  0%] [  0%] Built target actionlib_generate_messages_py
Built target actionlib_msgs_generate_messages_lisp
Built target tf2_msgs_generate_messages_py
[  0%] [  0%] [  0%] Built target actionlib_msgs_generate_messages_py
Built target sensor_msgs_generate_messages_py
Built target rosgraph_msgs_generate_messages_py
[  0%] Built target tf_generate_messages_lisp
[  0%] [  0%] [  0%] Built target sensor_msgs_generate_messages_lisp
Built target std_msgs_generate_messages_cpp
[  0%] [  0%] [  0%] Built target rosgraph_msgs_generate_messages_cpp
Built target tf2_msgs_generate_messages_cpp
Built target std_msgs_generate_messages_lisp
Built target tf_generate_messages_py
[35m[1mScanning dependencies of target mobility
[0m[ 25%] [32mBuilding CXX object CMakeFiles/mobility.dir/src/mobility.cpp.o
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void mapAverage()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1190:9: error: ‘init’ was not declared in this scope
     if (init) {
         ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:1190:9: note: suggested alternative:
In file included from /opt/ros/indigo/include/ros/node_handle.h:46:0,
                 from /opt/ros/indigo/include/ros/ros.h:45,
                 from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:1:
/opt/ros/indigo/include/ros/init.h:103:18: note:   ‘ros::init’
 ROSCPP_DECL void init(const VP_string& remapping_args, const std::string& name, uint32_t options = 0);
                  ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
